--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
                   <a class="px-2" href="">Coses a fer</a>
                 </div>
                 <ul class="list-group list-group-flush">
-                  <li class="list-group-item py-4">Reunió Conselleria<input class="mx-auto alig-items-right"
-                      type="checkbox"></li>
-                  <li class="list-group-item py-4">Reunió BBVA<input class="ml-auto" type="checkbox"></li>
-                  <li class="list-group-item py-4">Seminari BlockChain<input class="ml-auto" type="checkbox"></li>
+                  <li class="list-group-item card-title py-3">Reunió Conselleria<input class="ml-auto"
+                      type="checkbox"><p>10:00</p></li>
+                  <li class="list-group-item  card-title py-3">Reunió BBVA<input class="ml-auto" type="checkbox"><p>11:30</p></li>
+                  <li class="list-group-item card-title py-3" >Seminari BlockChain<input class="ml-auto" type="checkbox"><p>12:30</p></li>
                 </ul>
               </div>
             </div>
@@ -179,20 +179,38 @@
                 <div class="card-header py-4">
                   <a class="px-2" href="">Projectes</a>
                 </div>
-                <ul class="list-group list-group-flush">
-                  <li class="list-group-item py-4">Reunió Conselleria<input class="mx-auto alig-items-right"
-                      type="checkbox"></li>
-                  <li class="list-group-item py-4">Reunió BBVA<input class="ml-auto" type="checkbox"></li>
-                  <li class="list-group-item py-4">Seminari BlockChain<input class="ml-auto" type="checkbox"></li>
+                <ul class="list-group list-group-flush list-unstyled">
+
+                  <li class="px-4 py-4">Intranet BBVA<span class="float-right">20%</span>
+                    <div class="progress">
+                      <div class="progress-bar bg-danger" style="width: 20%;"></div>
+                  </li>
+
+                  <li class="px-4 py-4">Integració JSON Conselleria<span class="float-right">40%</span>
+                    <div class="progress">
+                      <div class="progress-bar bg-warning" style="width: 40%;"></div>
+                  </li>
+
+                  <li class="px-4 py-4">API Rest ITV<span class="float-right">60%</span>
+                    <div class="progress">
+                      <div class="progress-bar bg-primary" style="width: 60%;"></div>
+                  </li>
+
+                  <li class="px-4 py-4">Passarel·la pagament<span class="float-right">80%</span>
+                    <div class="progress">
+                      <div class="progress-bar bg-info" style="width: 80%;"></div>
+                  </li>
+
+                  <li class="px-4 py-4">Alta productos online<span class="float-right">Completat!</span>
+                    <div class="progress">
+                      <div class="progress-bar bg-success" style="width: 100%;"></div>
+                  </li>
+                  
                 </ul>
               </div>
             </div>
-
-
           </div>
         </div>
-
-
       </div>
     </div>
   </div>
