--- a/index.html
+++ b/index.html
@@ -107,17 +107,24 @@
           </div>
         </div>
         <div class="container-fluid">
-          <div class="row px-3 pt-4 mt-2">
+          <div class="row px-3 pt-4 mt-2 justify-content-center">
             <div class="col-6">
               <div class="card w-100 shadow">
                 <div class="card-header py-4">
                   <a class="px-2" href="">Coses a fer</a>
                 </div>
                 <ul class="list-group list-group-flush">
-                  <li class="list-group-item card-title py-3">Reunió Conselleria<input class="ml-auto"
-                      type="checkbox"><p>10:00</p></li>
-                  <li class="list-group-item  card-title py-3">Reunió BBVA<input class="ml-auto" type="checkbox"><p>11:30</p></li>
-                  <li class="list-group-item card-title py-3" >Seminari BlockChain<input class="ml-auto" type="checkbox"><p>12:30</p></li>
+                  <li class="list-group-item card-title py-3">Reunió Conselleria<input class="float-right"
+                      type="checkbox">
+                    <p>10:00</p>
+                  </li>
+                  <li class="list-group-item  card-title py-3">Reunió BBVA<input class="float-right" type="checkbox">
+                    <p>11:30</p>
+                  </li>
+                  <li class="list-group-item card-title py-3">Seminari BlockChain<input class="float-right"
+                      type="checkbox">
+                    <p>12:30</p>
+                  </li>
                 </ul>
               </div>
             </div>
@@ -174,42 +181,152 @@
               </div>
             </div>
 
-            <div class="col-6">
+            <!--Card Projectes-->
+
+            <div class="col-6 mr-auto">
               <div class="card w-100 shadow">
                 <div class="card-header py-4">
                   <a class="px-2" href="">Projectes</a>
                 </div>
-                <ul class="list-group list-group-flush list-unstyled">
+                <ul class="list-group list-group-flush list-unstyled px-2">
 
                   <li class="px-4 py-4">Intranet BBVA<span class="float-right">20%</span>
-                    <div class="progress">
-                      <div class="progress-bar bg-danger" style="width: 20%;"></div>
+                    <div class="progress barra-progreso mt-2">
+                      <div class="progress-bar bg-danger" style="width: 20%;">
+                    </div>
                   </li>
 
                   <li class="px-4 py-4">Integració JSON Conselleria<span class="float-right">40%</span>
-                    <div class="progress">
+                    <div class="progress barra-progreso mt-2">
                       <div class="progress-bar bg-warning" style="width: 40%;"></div>
                   </li>
 
                   <li class="px-4 py-4">API Rest ITV<span class="float-right">60%</span>
-                    <div class="progress">
+                    <div class="progress barra-progreso mt-2">
                       <div class="progress-bar bg-primary" style="width: 60%;"></div>
                   </li>
 
                   <li class="px-4 py-4">Passarel·la pagament<span class="float-right">80%</span>
-                    <div class="progress">
+                    <div class="progress barra-progreso mt-2">
                       <div class="progress-bar bg-info" style="width: 80%;"></div>
                   </li>
 
                   <li class="px-4 py-4">Alta productos online<span class="float-right">Completat!</span>
-                    <div class="progress">
+                    <div class="progress barra-progreso mt-2">
                       <div class="progress-bar bg-success" style="width: 100%;"></div>
                   </li>
-                  
+
                 </ul>
               </div>
             </div>
+
+            <!--Fin Card Projectes-->
+
+            <div class="col-5 mr-auto py-3 no-gutters">
+              <div class="container-fluid">
+                <div class="row">
+                  <div class="col-12">
+                    <div class="card w-100">
+                      <div class="card-header py-4">
+                        <a class="px-2" href="">Millor client</a>
+                      </div>
+                      <img class="card-img-top" src="img/fons.jpg" alt="Card image cap">
+                      <div class="card-body">
+                        <div class="row">
+                          <div class="col-4">
+                            <button id="conectar" class="btn btn-info p-2 px-3">Connectar</button>
+                          </div>
+                          <div class="col-4">
+                            <img id="imagenRedonda" class="rounded-circle d-block mx-auto" src="img/persona4.jpg"
+                              alt="imagenPersona">
+                          </div>
+                          <div class="col-4">
+                            <button id="missatge" class="btn btn-secondary p-2 px-3 float-right">Missatge</button>
+                          </div>
+                        </div>
+                        <div class="row justify-content-between mx-2 ml-3">
+                          <div class="col-4 text-center">
+                            <h1>22</h1>
+                            <h5>Comandes</h5>
+                          </div>
+                          <div class="col-4 text-center">
+                            <h1>1.230</h1>
+                            <h5>Accesos</h5>
+                          </div>
+                          <div class="col-4 text-center">
+                            <h1>89</h1>
+                            <h5>Comentaris</h5>
+                          </div>
+                        </div>
+                        <div class="row">
+                          <div class="col-12 text-center mt-4">
+                            <h1 class="font-weight-lighter"><strong>Pere Roig,</strong>&nbsp;27 anys</h1>
+                            <h5>Pego, Alacant</h5>
+                            <h4 class="py-4 font-weight-bold">Desenvolupador Web - DIW S.L.</h4>
+                            <h5>Ciutat de la llum</h5>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
+
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-3">
+                <div class="card shadow mb-3 w-100">
+                  <div class="card-body ventas-mes">
+                    <h5 class="card-title mt-3 mb-0 pl-3 text-primary">VENDES (MES)</h5>
+                    <i class="fa fa-calendar float-right" id="calendar"></i>
+                    <h3 class="pb-4 pl-3">50.000€</h3>
+                  </div>
+                </div>
+              </div>
+              <div class="col-3">
+                <div class="card shadow mb-3 w-100">
+                  <div class="card-body ventas-anual">
+                    <h5 class="card-title mt-3 mb-0 pl-3 text-success">VENDES (ANUALS)</h5>
+                    <i class="fas fa-euro-sign"></i>
+                    <h3 class="pb-4 pl-3">355.000€</h3>
+                  </div>
+                </div>
+              </div>
+              <div class="col-3">
+                <div class="card shadow mb-3 w-100">
+                  <div class="card-body tasques">
+                    <div class="row">
+                      <div class="col-4 mx-0 px-0">
+                        <h5 class="card-title mt-3 mx-2 text-info no-gutters">TASQUES</h5>
+                        <h3 class="text-secondary mb-3 pl-3">50%</h3>
+                      </div>
+                      <div class="col-4 py-3">
+                        <div class="progress">
+                          <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                      </div>
+                      <div class="col-4">
+                        <i class="fa fa-calendar float-right"></i>
+                      </div>
+                      
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col-3">
+                <div class="card shadow mb-3 w-100">
+                  <div class="card-body ventas">
+                    <h5 class="card-title mt-5 mb-0 pl-3 text-primary">VENDES (MES)</h5>
+                    <i class="fa fa-calendar float-right"></i>
+                    <h3 class="text-secondary pb-4 pl-3">50.000€</h3>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
