--- a/index.html
+++ b/index.html
@@ -71,18 +71,18 @@
 
           <div class="collapse navbar-collapse fila-navbar-superior d-flex justify-content-end" id="collapsibleNavId">
             <ul class="navbar-nav mt-2 ml-auto">
-              <li class="nav-item dropdown">
+              <li class="nav-item">
                 <a class="nav-link" href="#"><i class="fa fa-bell"></i><span class="sr-only"></span><span
                     class="badge badge-pill badge-danger">3+</span></span></a>
 
 
               </li>
               <li class="nav-item borde">
-                <a class="nav-link dropdown" href="#"><i class="fa fa-envelope"></i><span class="sr-only"></span><span
+                <a class="nav-link" href="#"><i class="fa fa-envelope"></i><span class="sr-only"></span><span
                     class="badge badge-pill badge-danger">12+</span></span></a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" aria-haspopup="true" aria-expanded="false">Sonia Sendra<img
+              <li class="nav-item">
+                <a class="nav-link" href="#" aria-haspopup="true" aria-expanded="false">Sonia Sendra<img
                     class="rounded-circle ml-2" src="img/avatar1.jpeg" alt="avatar1"></a>
               </li>
             </ul>
@@ -93,22 +93,24 @@
 
         <div class="container-fluid">
           <div class="col-12 mt-2">
-            <div class="row mt-5 mb-3 justify-content-between no-gutters">
+            <div class="row mt-2 mb-3 justify-content-between no-gutters">
               <h1>Inici</h1>
               <a href="#" id="descarga" class="d-none d-sm-inline-block btn btn-sm btn-info p-2"><i
                   class="fa fa-download mr-1"></i>Descarrega informe</a>
             </div>
             <div class="card shadow">
-              <div class="card-header py-4">
+              <div class="card-header py-2">
                 <a class="px-2 titulo-header" href="">Informació</a>
               </div>
               <div class="card-body">
                 <div class="row justify-content-center mt-5">
                   <div class="col-6 text-center">
                     <img class="mx-auto d-block" src="/img/informe.svg" alt="informe">
-                    <h2 class="mt-5">Tens nous informes!</h2>
-                    <h4 class="mb-3 mt-3">Accedeix <a href="#">açí</a> per personalitzar-los, filtrar-los i
-                      descarregar-te'ls</h4>
+                    <div class="texto-informe">
+                    <h4 class="mt-4">Tens nous informes!</h4>
+                    <h6 class="mb-3 mt-3">Accedeix <a href="#">açí</a> per personalitzar-los, filtrar-los i
+                      descarregar-te'ls</h6>
+                    </div>
                   </div>
                 </div>
               </div>
@@ -119,20 +121,20 @@
           <div class="row px-3 pt-4 mt-2 justify-content-center">
             <div class="col-xl-6 col-12">
               <div class="card w-100 shadow">
-                <div class="card-header py-4">
+                <div class="card-header py-3">
                   <a class="px-2 titulo-header" href="">Coses a fer</a>
                 </div>
                 <ul class="list-group list-group-flush">
-                  <li class="list-group-item card-title py-3">Reunió Conselleria<input class="float-right mt-3"
+                  <li class="list-group-item card-title py-2 font-weight-bold">Reunió Conselleria<input class="float-right mt-3"
                       type="checkbox">
-                    <p>10:00</p>
+                    <p class="text-muted">10:00</p>
                   </li>
-                  <li class="list-group-item  card-title py-3">Reunió BBVA<input class="float-right mt-3" type="checkbox">
-                    <p>11:30</p>
+                  <li class="list-group-item card-title py-2 font-weight-bold">Reunió BBVA<input class="float-right mt-3" type="checkbox">
+                    <p class="text-muted">11:30</p>
                   </li>
-                  <li class="list-group-item card-title py-3">Seminari BlockChain<input class="float-right mt-3"
+                  <li class="list-group-item card-title py-2 font-weight-bold">Seminari BlockChain<input class="float-right mt-3"
                       type="checkbox">
-                    <p>12:30</p>
+                    <p class="text-muted">12:30</p>
                   </li>
                 </ul>
               </div>
@@ -140,47 +142,47 @@
             <div class="col-xl-6 col-12 pl-4">
               <div class="row">
                 <div class="col-6">
-                  <div class="card text-white bg-primary mb-3 w-100">
+                  <div class="card cartas text-white bg-primary mb-3 w-100">
                     <div class="card-body">
                       <h5 class="card-title ml-2 mt-2">API Rest ITV</h5>
-                      <p class="card-text ml-2 mt-2">60%</p>
+                      <p class="card-text ml-2">60%</p>
                     </div>
                   </div>
                 </div>
                 <div class="col-6 pl-4">
-                  <div class="card text-white bg-success mb-3 w-100">
+                  <div class="card cartas text-white bg-success mb-3 w-100">
                     <div class="card-body">
                       <h5 class="card-title ml-2 mt-2">Alta productes online</h5>
-                      <p class="card-text ml-2 mt-2">Completat</p>
+                      <p class="card-text ml-2 mt-2" >Completat</p>
                     </div>
                   </div>
                 </div>
-                <div class="col-6 mt-4">
-                  <div class="card text-white bg-info mb-3 w-100">
+                <div class="col-6 mt-3">
+                  <div class="card cartas text-white bg-info mb-3 w-100">
                     <div class="card-body">
                       <h5 class="card-title ml-2 mt-2">Pasarel·la pagament</h5>
                       <p class="card-text ml-2 mt-2">80%</p>
                     </div>
                   </div>
                 </div>
-                <div class="col-6 pl-4 mt-4">
-                  <div class="card text-white bg-warning mb-3 w-100">
+                <div class="col-6 pl-4 mt-3">
+                  <div class="card cartas text-white bg-warning mb-3 w-100">
                     <div class="card-body">
                       <h5 class="card-title ml-2 mt-2">JSON Conselleria</h5>
                       <p class="card-text ml-2 mt-2">40%</p>
                     </div>
                   </div>
                 </div>
-                <div class="col-6 mt-4">
-                  <div class="card text-white bg-danger mb-3 w-100">
+                <div class="col-6 mt-3">
+                  <div class="card cartas text-white bg-danger mb-3 w-100">
                     <div class="card-body">
                       <h5 class="card-title">Intranet BBVA</h5>
                       <p class="card-text">20%</p>
                     </div>
                   </div>
                 </div>
-                <div class="col-6 pl-4 mt-4">
-                  <div class="card text-white bg-secondary mb-3 w-100">
+                <div class="col-6 pl-4 mt-3">
+                  <div class="card cartas text-white bg-secondary mb-3 w-100">
                     <div class="card-body">
                       <h5 class="card-title">Informació projectes</h5>
                       <p class="card-text">%</p>
